# textbook

./: .gitignore  .pre-commit-config.yaml  README.md  ds_config.json  pyproject.toml  setup_vm.sh  train.py
.github/workflows/: ci.yml
human-eval/: setup.py
human-eval/human_eval/: data.py  evaluate_functional_correctness.py  evaluation.py  execution.py
jerboa2/: dataset.py  train.py
jerboa2/model/: model.py
tests/: test_version.py
tests/data/: prompts_debug.jsonl
tests/dataset_gen/: create_prompts.py  test_integration.py  test_units.py  test_units_async.py  topics.csv
tests/eval/: test_evaluation.py
tests/integration/: test_dataset_gen.py  test_train.py
tests/training/integration/: test_train.py
tests/training/units/: test_dataset.py  test_model.py
tests/units/: test_dataset.py  test_dataset_gen.py  test_replit.py  test_self_checking.py
tests/units/model/: test_star_coder.py
textbook/: api.py  dataset.py  dataset_gen.py  evaluate.py  model.py  train.py
textbook/dataset_gen/: .gitignore  chapters.jsonl  create_prompts.py  dataset_gen.py  dataset_gen_cli.py  filtering.py  professions
textbook/dataset_gen/tree/: professions.json  prompts.json  subsubtopics.json  subtopics.json
textbook/model/: model.py
textbook/self_check/: README.md  check_exercise.py  gen_test.py  requirements.txt
